@@ -6,4 +6,4 @@ ENV SERVER_PORT=8080
 ENV SPRING_PROFILE=release
 ENV LOG_PATH_PREFIX='/log'
 
-ENTRYPOINT ["sh", "-c", "java -jar -Dserver.port=$SERVER_PORT -Dspring.profiles.active=$SPRING_PROFILE /app.jar > $LOG_PATH_PREFIX/app.log 2>&1"]
+ENTRYPOINT ["sh", "-c", "java -jar -Xms256m -Xmx512m -Xlog:gc*,safepoint:file=$LOG_PATH_PREFIX/gc_%p.log:time,uptime,level,tags:filecount=10,filesize=20M -Dserver.port=$SERVER_PORT -Dspring.profiles.active=$SPRING_PROFILE /app.jar > $LOG_PATH_PREFIX/app.log 2>&1"]
